@@ -305,7 +305,7 @@ It's like a balloon, and something bad happens!</property>
       <property name="shadow_type">GTK_SHADOW_OUT</property>
 
       <child>
-	<widget class="GtkScrolledWindow" id="scrolledwindow23">
+	<widget class="GtkScrolledWindow" id="scrolledwindow_userlist">
 	  <property name="border_width">3</property>
 	  <property name="visible">True</property>
 	  <property name="can_focus">True</property>
@@ -315,18 +315,7 @@ It's like a balloon, and something bad happens!</property>
 	  <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
 
 	  <child>
-	    <widget class="GtkTreeView" id="userlist">
-	      <property name="visible">True</property>
-	      <property name="can_focus">True</property>
-	      <property name="has_focus">True</property>
-	      <property name="headers_visible">False</property>
-	      <property name="rules_hint">False</property>
-	      <property name="reorderable">False</property>
-	      <property name="enable_search">True</property>
-	      <property name="fixed_height_mode">False</property>
-	      <property name="hover_selection">True</property>
-	      <property name="hover_expand">False</property>
-	    </widget>
+	    <placeholder/>
 	  </child>
 	</widget>
       </child>
