@@ -258,7 +258,6 @@ void
 navigation_tree_create_new_channel_entry (NavTree *navtree, struct session *sess)
 {
 	GtkWidget *menuitem, *button;
-	GtkTreeView *treeview;
 	ircnet *net;
 
 	navigation_model_add_new_channel (navtree->model, sess);
@@ -271,8 +270,8 @@ navigation_tree_create_new_channel_entry (NavTree *navtree, struct session *sess
 	navigation_tree_update_refs (navtree);
 
 	/* Set the userlist model */
-	treeview = GTK_TREE_VIEW (glade_xml_get_widget (gui.xml, "userlist"));
-	gtk_tree_view_set_model (treeview, GTK_TREE_MODEL (userlist_get_store (u, sess)));
+	gtk_tree_view_set_model ( GTK_TREE_VIEW (gui.userlist),
+			          GTK_TREE_MODEL (userlist_get_store (u, sess)));
 
 	topic_label_set_current (TOPIC_LABEL (gui.topic_label), sess);
 	net = sess->server->network;
@@ -1035,7 +1034,6 @@ navigation_selection_changed (GtkTreeSelection *treeselection, gpointer user_dat
 	GtkTreeIter   newiter;
 	GtkTreeModel *model;
 	GtkTreeModel *store;
-	GtkTreeView  *treeview;
 	GtkWidget    *button;
 	gpointer     *s;
 	session      *sess;
@@ -1043,7 +1041,6 @@ navigation_selection_changed (GtkTreeSelection *treeselection, gpointer user_dat
 	if (gui.server_tree == NULL)
 		return;
 
-	treeview = GTK_TREE_VIEW (glade_xml_get_widget (gui.xml, "userlist"));
 
 	if (gui.server_tree->current_rowref != NULL)
 		navigation_model_rowref_deref (gui.server_tree->current_rowref);
@@ -1082,7 +1079,8 @@ navigation_selection_changed (GtkTreeSelection *treeselection, gpointer user_dat
 		gui.current_session = sess;
 
 		/* Change the model in the userlist to the one for this session. */
-		gtk_tree_view_set_model (treeview, GTK_TREE_MODEL (userlist_get_store (u, sess)));
+		gtk_tree_view_set_model (GTK_TREE_VIEW (gui.userlist),
+				         GTK_TREE_MODEL (userlist_get_store (u, sess)));
 
 		/* Set our nick. */
 		set_nickname (sess->server, NULL);
